# pdecheb

./: .gitignore  CMakeLists.txt  Makefile  README.md  acm-toms-690.f  readme.txt
.github/: run_examples.yml
.github/workflows/: run_examples.yml
dassl/: ddaini.f  ddajac.f  ddanrm.f  ddaslv.f  ddassl.f  ddastp.f  ddatrp.f  ddawts.f  s88fmt.f  xerrwv.f
examples/: dgejac.f  example1.f  example2.f  example3.f  example4.f  example5.f  example_output.txt  examples.f
linpack/: linpack.f
pdecheb/: chintr.f  cres.f  cset.f  dres.f  error.f  inichb.f  interc.f  intrch.f  pdechb.f  pdecheb_common.f90  readme.txt  scherr.f  twou.f
